tests/semantic/fail/array-wrong-type.tiger
let
      var x := int[4] of "a"
in

end
